<technology.mainthread.apps.moment.ui.view.SlidingFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

    <LinearLayout
        android:id="@+id/loader_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/searching_for_wearables"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="-40dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/img_wearable_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/wearable_status"
            android:src="@drawable/ic_watch_120dp" />

        <TextView
            android:id="@+id/txt_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/result_wearables_found"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/txt_result_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/result_wearables_found_detail"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:padding="10dp"/>
    </LinearLayout>


    <include layout="@layout/view_continue_button" />

</technology.mainthread.apps.moment.ui.view.SlidingFrameLayout>