<technology.mainthread.apps.moment.ui.view.SlidingFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/title_friend_discovery"
        android:textColor="@android:color/white"
        android:textSize="35sp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_found_friends"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/container_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="-40dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txt_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searching_friends"
            android:textColor="@color/accent"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_invite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invite_friends"
            android:visibility="gone" />

    </LinearLayout>

    <include layout="@layout/view_continue_button" />

</technology.mainthread.apps.moment.ui.view.SlidingFrameLayout>